--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@ Con la construcción de la primera piscina en el Oker en 1952, este tradicional 
 
             <!-- Кнопка 4, ведущая на предыдущую страницу -->
 
-            <a href="https://museumwolfenbuettel.github.io/The-Early-Weimar-Years-in-Wolfenb-ttel/" class="button small-button">5</a>
+            <a href="https://museumwolfenbuettel.github.io/5.Vias-fluviales/" class="button small-button">5</a>
 
            
 
             <!-- Кнопка 5, ведущая на следующую страницу -->
 
-            <a href="https://museumwolfenbuettel.github.io/Buerger-Museum/" class="button">7</a>
+            <a href="https://museumwolfenbuettel.github.io/7.Rieles-y-maquinas/" class="button">7</a>
 
         </div>
 
